# terminal-menu-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  nano.save
examples/: async.rs  basics.rs  cancel.rs  color.rs  colors.rs  ex0.rs  ex1.rs  label.rs  list_and_scroll.rs  long.rs  readme.rs  selections.rs  simple.rs  string_and_numeric.rs  submenu.rs  submenus.rs  test.rs  tests.rs
src/: basic_menu.rs  fancy_menu.rs  item.rs  lib.rs  utils.rs
